<resources>
    <string name="app_name">文广通讯</string>
    <string name="action_settings">Settings</string>
    <string name="account">手机号/账号:</string>
    <string name="passwed">验证码/密码:</string>
    <string name="login_verify">获取验证码</string>
    <string name="login">登    录</string>
    <string name="passwed_login">有密码？密码登录</string>
    <string name="accountandpasswedempty">账号或密码为空</string>
    <string name="accountandpasswederror">账号或密码错误</string>
    <string name="notmobnumber">请输入正确的手机号码</string>
    <string name="forget_verifylogin">忘记密码?验证码登录</string>
    <string name="menu_home">通话记录</string>
    <string name="menu_contact">联系人</string>
    <string name="menu_message">信息</string>
    <string name="menu_mine">我</string>
    <string name="call_records">通话记录</string>
    <string name="miss_call_count">未接来电\n\n0</string>
    <string name="miss_sms_count">未读短信\n\n0</string>
    <!--  <![CDATA[请使用<font color="#ff0000"><b>%1$s</b></font>牛兑换<font color="#00ff00"><b>%2$s</b></font>%3$s 上网时长]]>-->
    <string name="miss_call_counts"> 未接来电\n%s</string>
    <string name="miss_sms_counts">未读短信\n%s</string>
    <string name="record_call_time" formatted="false">%s %s</string>
    <string name="free_call_style" formatted="false">%s\r\n %s</string>
    <string name="add_contact">添加联系人</string>
    <string name="address_list">通讯录</string>
    <string name="mine_info">我的资料</string>
    <string name="mine_account">我的账号</string>
    <string name="mine_idcard">身份认证</string>
    <string name="mine_recommend">推荐好友</string>
    <string name="mine_recommend_info">推荐给好友，让好友和你一起玩转免费通话！</string>
    <string name="mine_about">关于我们</string>
    <string name="mine_about_info">因为专注，所以专业。文广通讯让你沟通无忧！</string>
    <string name="call_phone">通话</string>
    <string name="title_activity_recommend">RecommendActivity</string>
    <string name="selectall">全选</string>
    <string name="recommed">推荐</string>
    <string name="send">发      送</string>
    <string name="send_message">我是%s，最近在使用一款免费的通话软件，感觉还不错，推荐给你，给你连接地址：www.baidu.com，常联系！</string>
    <string name="message">信息</string>
    <string name="inputname">姓名</string>
    <string name="inputsgn">个性签名</string>
    <string name="inputidcard">身份证号</string>
    <string name="cancel">取  消</string>
    <string name="free_call">免费电话</string>
    <string name="pu_call">普通电话</string>
    <string name="mianti">免提</string>
    <string name="s_pu_call">转普通电话</string>
    <string name="jingyin">静音</string>
    <string name="jianpan">键盘</string>
    <string name="tongxunlu">通讯录</string>
    <string name="status_connecting">正在接通...</string>
    <string name="status_connected">连接中...</string>
    <string name="jujue">拒 绝</string>
    <string name="jieting">接 听</string>
    <string name="on_the_line">通话中...</string>
    <string name="guaduan">挂断</string>
    <string name="otherguaduan">对方已挂断</string>
    <string name="confuse">已拒绝</string>

    <string name="The_other_is_not_online">对方不在线</string>
    <string name="illegal_user_name">用户名不合法</string>
    <string name="The_other_is_on_the_phone">对方正在通话中</string>
    <string name="Is_not_yet_connected_to_the_server">尚未连接至服务器</string>
    <string name="can_not_connect_chat_server_connection">连接不到聊天服务器</string>
    <string name="Refused">已拒绝</string>
    <string name="The_other_party_has_refused_to">对方已拒绝</string>
    <string name="call_duration">通话时长</string>
    <string name="did_not_answer">未接听</string>
    <string name="The_other_party_did_not_answer">对方未接听</string>
    <string name="Has_been_cancelled">已取消</string>
    <string name="call_version_inconsistent">通话协议版本不一致</string>
    <string name="network_unstable">网络不稳定</string>
    <string name="no_call_data">没有通话数据</string>
    <string name="The_other_party_refused_to_accept">对方拒绝接受！</string>
    <string name="hang_up">挂断</string>
    <string name="Connection_failure">连接建立失败！</string>
    <string name="The_other_party_is_not_online">对方不在线，请稍后再拨……</string>
    <string name="The_other_is_on_the_phone_please">对方正在通话中，请稍后再拨</string>
    <string name="The_other_is_hang_up">对方已经挂断</string>
    <string name="The_other_party_did_not_answer_new">对方未接听</string>
    <string name="Into_the_blacklist">移入到黑名单？</string>
    <string name="quit">退出</string>
    <string name="title_activity_message_convertion">MessageConvertionActivity</string>
</resources>
