<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              xmlns:app="http://schemas.android.com/tools"
              xmlns:toolbar="http://schemas.android.com/apk/res-auto"
              xmlns:tools="http://schemas.android.com/tools"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/thin_white"
        app:popupTheme="@style/ThemeOverlay.AppCompat.Light"
        app:theme="@style/ThemeOverlay.AppCompat.Dark.ActionBar"
        toolbar:theme="@style/ToolBarTheme"
        >

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/mine_info"
            android:textColor="@android:color/black"
            android:textSize="20sp"/>

    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <android.support.v4.widget.CircleImageView
            android:id="@+id/mine_img"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"/>

        <EditText
            android:id="@+id/mine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:textSize="@dimen/tenteen_sp"
            />

        <EditText
            android:id="@+id/mine_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            tools:text="张三"
            />

    </LinearLayout>

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:drawableLeft="@drawable/circle_cyan"
        android:drawablePadding="@dimen/twenty_dp"
        android:paddingLeft="@dimen/twenty_dp"
        android:text="@string/mine_account"
        android:textSize="@dimen/eighteen_sp"
        />

    <EditText
        android:id="@+id/mine_account"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:textSize="@dimen/sixteen_sp"
        />

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/ten_dp"
        android:drawableLeft="@drawable/circle_cyan"
        android:drawablePadding="@dimen/twenty_dp"
        android:paddingLeft="@dimen/twenty_dp"
        android:text="@string/mine_idcard"
        android:textSize="@dimen/eighteen_sp"
        />

    <EditText
        android:id="@+id/mine_idcard"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="@dimen/five_dp"
        android:textSize="@dimen/sixteen_sp"
        />

    <LinearLayout
        android:id="@+id/recommend"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:drawableLeft="@drawable/circle_cyan"
            android:drawablePadding="@dimen/twenty_dp"
            android:paddingLeft="@dimen/twenty_dp"
            android:text="@string/mine_recommend"
            android:textSize="@dimen/eighteen_sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:paddingLeft="@dimen/fourty_five"
            android:text="@string/mine_recommend_info"
            android:textSize="@dimen/eighteen_sp"
            />
    </LinearLayout>

    <LinearLayout
        android:id="@+id/about"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:drawableLeft="@drawable/circle_cyan"
            android:drawablePadding="@dimen/twenty_dp"
            android:paddingLeft="@dimen/twenty_dp"
            android:text="@string/mine_about"
            android:textSize="@dimen/eighteen_sp"
            />

        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/five_dp"
            android:paddingLeft="@dimen/fourty_five"
            android:text="@string/mine_about_info"
            android:textSize="@dimen/eighteen_sp"
            />
    </LinearLayout>
</LinearLayout>
