<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="fill_parent"
              android:layout_height="fill_parent"
              android:background="@android:color/transparent"
              android:gravity="center"
              android:orientation="vertical">

    <RelativeLayout
        android:layout_width="@dimen/two_huandryd_fivty_dp"
        android:layout_height="@dimen/two_huandryd_fivty_dp"
        android:background="@drawable/call_phone_background"
        android:gravity="center"
        android:orientation="vertical">

        <TextView
            android:id="@+id/show_num"
            android:layout_width="match_parent"
            android:layout_height="@dimen/four_eight_dp"
            android:layout_alignParentTop="true"
            android:layout_marginTop="@dimen/twenty_dp"
            android:textSize="@dimen/twenty_two_sp"
            android:gravity="center"
            android:textColor="@android:color/black"
            />

        <Button
            android:id="@+id/free_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/show_num"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/twenty_dp"
            android:background="@drawable/select_call_phone"
            android:text="@string/free_call"
            android:textColor="@drawable/btn_textcolor"/>

        <Button
            android:id="@+id/pu_call"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@id/free_call"
            android:layout_marginLeft="@dimen/twenty_dp"
            android:layout_marginRight="@dimen/twenty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@drawable/select_call_phone"
            android:text="@string/pu_call"
            android:textColor="@drawable/btn_textcolor"/>

        <Button
            android:id="@+id/cancle"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:background="@color/white"
            android:ellipsize="end"
            android:gravity="center"
            android:padding="10dp"
            android:singleLine="true"
            android:text="@string/cancel"
            android:textColor="@color/qing"
            android:textSize="@dimen/eighteen_sp"/>
    </RelativeLayout>

</LinearLayout>