<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/tools"
    xmlns:toolbar="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical">

    <android.support.v7.widget.Toolbar
        android:id="@+id/toolbar"
        android:layout_width="match_parent"
        android:layout_height="?attr/actionBarSize"
        android:background="@color/thin_white"
        app:popupTheme="@style/ToolBarTheme"
        toolbar:theme="@style/ToolBarTheme">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:text="@string/recommed"
            android:textColor="@android:color/black"
            android:textSize="20sp" />


    </android.support.v7.widget.Toolbar>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <com.wenguang.chat.widget.CircleImageView
            android:id="@+id/mine_img"
            android:layout_width="@dimen/eighty_dp"
            android:layout_height="@dimen/eighty_dp"
            android:layout_marginTop="@dimen/ten_dp"
            android:src="@drawable/head_icon" />

        <TextView
            android:id="@+id/mine_name"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@null"
            android:gravity="center_horizontal"
            android:layout_marginTop="@dimen/ten_dp"
            android:textSize="@dimen/eighteen_sp"
            android:text="张三" />

        <TextView
            android:id="@+id/mine_sign"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="@dimen/ten_dp"
            android:background="@null"
            android:gravity="center_horizontal"
            android:text="文光通讯"
            android:textSize="@dimen/tenteen_sp"

            />

    </LinearLayout>
 <EditText
     android:id="@+id/send_msg"
     android:layout_width="match_parent"
     android:layout_margin="@dimen/twenty_dp"
     android:background="@drawable/edit_text_shape"
     android:gravity="start"
     android:padding="@dimen/five_dp"
     android:textSize="@dimen/sixteen_sp"
     android:text="@string/send_message"
     android:layout_height="@dimen/two_huandryd_dp" />

    <Button
        android:id="@+id/send"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:textColor="@color/white"
        android:layout_gravity="center_horizontal"
        android:textSize="@dimen/eighteen_sp"
        android:layout_marginTop="@dimen/ten_dp"
        android:background="@drawable/send_bun_shape"
        android:text="@string/send"/>

</LinearLayout>
