<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@android:color/background_dark"
    android:orientation="vertical"
    tools:context="com.wenguang.chat.activity.EMCallPhoneActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="3">

        <ImageView
            android:id="@+id/headimg"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_centerInParent="true"
            android:src="@drawable/icon_call_head" />

        <TextView
            android:id="@+id/phone"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/headimg"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/ten_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/twenty_two_sp"
            tools:text="18200366005" />

        <TextView
            android:id="@+id/address"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/phone"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/three"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            tools:text="四川成都" />

        <TextView
            android:id="@+id/status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_below="@id/address"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="@dimen/twenty_dp"
            android:textColor="@color/white"
            android:textSize="@dimen/fourteen_sp"
            tools:text="正在连通……" />


    </RelativeLayout>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="2"
        android:paddingLeft="@dimen/ten_dp"
        android:paddingRight="@dimen/ten_dp"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:paddingLeft="@dimen/twenty_dp"
            android:paddingRight="@dimen/twenty_dp">

            <TextView
                android:id="@+id/mianti"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_mianti_p"
                android:text="@string/mianti"
                android:textColor="@color/qing"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/pu_call"
                android:layout_width="wrap_content"
                android:drawableTop="@drawable/icon_pucall_p"
                android:text="@string/s_pu_call"
                android:textColor="@color/qing"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/quite"
                android:layout_width="wrap_content"
                android:drawableTop="@drawable/icon_quite_p"
                android:text="@string/jingyin"
                android:textColor="@color/qing"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:layout_centerVertical="true"/>

        </RelativeLayout>

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="0dp"
            android:layout_weight="1"
            android:layout_marginBottom="@dimen/ten_dp"
            android:paddingLeft="@dimen/twenty_dp"
            android:paddingRight="@dimen/twenty_dp">
            <TextView
                android:id="@+id/keybox"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_keybox_p"
                android:text="@string/jianpan"
                android:textColor="@color/qing"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"
                android:layout_alignParentLeft="true" />

            <TextView
                android:id="@+id/kill"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:drawableTop="@drawable/icon_kill_p"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_centerInParent="true" />

            <TextView
                android:id="@+id/cantact"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_alignParentRight="true"
                android:drawableTop="@drawable/icon_cantact_p"
                android:text="@string/tongxunlu"
                android:textColor="@color/qing"
                android:drawablePadding="@dimen/five_dp"
                android:gravity="center_horizontal"
                android:layout_centerVertical="true"/>
        </RelativeLayout>
    </LinearLayout>
</LinearLayout>
